--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.fusionjack.slimota"
+        applicationId "com.anand.aimota"
         minSdkVersion 21
         targetSdkVersion 22
         versionCode 4
